--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Contadel</title>
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
+
 </head>
 
 <body>
     <main class="page lanidng-page">
+        <!-- Start of navigation bar -->
         <section class="portfolio-block block-intro">
             <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
                 <div class="container"><a class="navbar-brand logo" href="#">Contadel</a><button class="navbar-toggler"
@@ -32,30 +36,40 @@
                     </div>
                 </div>
             </nav>
+            <!-- End of navigation bar -->
+
+            <!-- Container for website introduction -->
             <div class="container">
                 <br>
                 <br>
                 <div class="about-me">
+                    <!-- Start of heading -->
                     <h1>Contadel</h1>
+                    <!-- End of heading -->
                     <br>
+                    <!-- Start of introduction text -->
                     <p style="text-align: justify">Contadel provides collaboration facilitation services to construction-related businesses and
                         professionals seeking
                         to deliver projects across borders. Specifically, this platform functions as a two-sided market
                         place
                         with professional expertise and project management knowledge
                         as the commodities on trade. </p>
+                    <!-- End of introduction text -->
 
-
+                    <!-- Start of search form -->
                     <p><input type="text" class="form-control form-control-user" id="exampleFirstName"
                             placeholder="Search" style="width:200px; display:inline-block">
                         <input type="text" class="form-control form-control-user" id="exampleFirstName"
                             placeholder="Country" style="width:200px;display:inline-block">
-                        <a class="btn btn-outline-primary" role="button" href="cv.html">Search</a></p>
-
-
+                        <a class="btn btn-outline-primary" role="button" href="cv.html">Search</a>
+                    </p>
+                    <!-- End of search form -->
                 </div>
             </div>
+            <!-- End of container for website introduction -->
         </section>
+
+        <!-- Start of image links to other pages -->
         <section class="portfolio-block photography">
             <div class="container">
                 <div class="row no-gutters">
@@ -68,6 +82,9 @@
                 </div>
             </div>
         </section>
+        <!-- End of image links to other pages -->
+
+        <!-- Start of get in touch section -->
         <section class="portfolio-block call-to-action border-bottom">
             <div class="container">
                 <div class="d-flex justify-content-center align-items-center content">
@@ -76,12 +93,21 @@
                 </div>
             </div>
         </section>
+        <!-- End of get in touch section -->
+
+        <!-- Start of contadel functionality information -->
         <section class="portfolio-block skills">
+            <!-- Start of container -->
             <div class="container">
+                <!-- Start of heading -->
                 <div class="heading">
                     <h2>What can you find in CONTADEL</h2>
                 </div>
+                <!-- End of heading -->
+
+                <!-- Start of rows and columns for card placement -->
                 <div class="row">
+                    <!-- Start of first card -->
                     <div class="col-md-4">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i>
@@ -93,6 +119,9 @@
                             </div>
                         </div>
                     </div>
+                    <!-- End of first card -->
+
+                    <!-- Start of second card -->
                     <div class="col-md-4">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i
@@ -105,6 +134,9 @@
                             </div>
                         </div>
                     </div>
+                    <!-- End of second card -->
+
+                    <!-- Start of third card -->
                     <div class="col-md-4">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i>
@@ -117,18 +149,30 @@
                             </div>
                         </div>
                     </div>
+                    <!-- End of third card -->
                 </div>
+                <!-- End of rows and columns for card placement -->
             </div>
+            <!-- End of container -->
         </section>
+        <!-- Start of contadel functionality information -->
     </main>
+    <!-- End of main contents -->
+
+    <!-- Start of Contadel purpose section -->
     <section class="portfolio-block website gradient">
+        <!-- Start of container -->
         <div class="container">
             <div class="row align-items-center">
+                <!-- Start of text area -->
                 <div class="col-md-12 col-lg-5 offset-lg-1 text">
                     <h3>CONTADEL</h3>
                     <p>Contadel provides collaboration facilitation services to construction-related businesses and
                         professionals seeking to deliver projects across borders.</p>
                 </div>
+                <!-- End of text area -->
+
+                <!-- Start of image holder -->
                 <div class="col-md-12 col-lg-5">
                     <div class="portfolio-laptop-mockup">
                         <div class="screen">
@@ -137,21 +181,31 @@
                         <div class="keyboard"></div>
                     </div>
                 </div>
+                <!-- End of image holder -->
             </div>
         </div>
+        <!-- End of container -->
     </section>
+    <!-- End of Contadel purpose section -->
+
+    <!--Start of footer-->
     <footer class="page-footer">
         <div class="container">
             <div class="links"><a href="#">About us</a><a href="#">Contact&nbsp;</a><a href="#"></a></div>
             <div class="social-icons"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i
-                        class="icon ion-social-instagram-outline"></i></a><a href="#"><i
-                        class="icon ion-social-twitter"></i></a></div>
+                        class="icon ion-social-instagram-outline"></i></a><a href="#">
+                          <i class="icon ion-social-twitter"></i></a></div>
         </div>
     </footer>
+    <!--End of footer-->
+
+    <!--Scripts-->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
     <script src="assets/js/theme.js"></script>
+    <!--End of scripts-->
+    
 </body>
 
 </html>
