--- a/cv.html
+++ b/cv.html
@@ -5,13 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>CV - Brand</title>
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
+
 </head>
 
 <body>
+    <!-- Start of navigation bar -->
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
         <div class="container"><a class="navbar-brand logo" href="#">Contadel</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse"
@@ -25,16 +29,27 @@
             </div>
         </div>
     </nav>
+    <!-- End of navigation bar -->
+
+    <!-- Start of main content -->
     <main class="page cv-page">
+        <!--Introduction to user -->
         <section class="portfolio-block block-intro border-bottom">
+            <!--Start of container for introduction-->
             <div class="container">
                 <div class="avatar" style="background-image:url(&quot;assets/img/avatars/avatar.jpg&quot;);"></div>
                 <div class="about-me">
                     <p>Hello! I am <strong>Ifonima Essien</strong> <p>I am a result-driven Project Manager with extensive experience in construction-related roles with a track record of successfully delivering commercial, housing and public sector projects to stakeholder satisfaction and adept at contract administration, strategic planning and technical advisory services.</p></p><a class="btn btn-outline-primary" role="button" href="#">Hire me</a></div>
             </div>
+            <!--End of container for introduction-->
         </section>
+        <!--End of ntroduction to user -->
+
+        <!--Start of portfolio of user -->
         <section class="portfolio-block cv">
+            <!--Start of container for porfolio-->
             <div class="container">
+                <!--Start of work experience of user -->
                 <div class="work-experience group">
                     <div class="heading">
                         <h2 class="text-center">Work Experience</h2>
@@ -76,6 +91,9 @@
                                 <p class="text-muted">Engaged in the client-side project management to deliver several projects in line with the Universitys' Estate Investment Plan. I am responsible for the delivery of various construction projects as follows; </p>
                             </div>
                 </div>
+                <!--End of work experience of user -->
+
+                <!--Start of education background of user -->
                 <div class="education group">
                     <div class="heading">
                         <h2 class="text-center">Education</h2>
@@ -101,8 +119,11 @@
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget velit ultricies, feugiat est sed, efficitur nunc, vivamus vel accumsan dui.</p>
                     </div>
                 </div>
+                <!--End of education background of user -->
+
                 <div class="group">
                     <div class="row">
+                        <!--Start of skills of user -->
                         <div class="col-md-6">
                             <div class="skills portfolio-info-card">
                                 <h2>Skills</h2>
@@ -120,6 +141,9 @@
                                 </div>
                             </div>
                         </div>
+                        <!--End of skills of user -->
+
+                        <!--Start of contact information -->
                         <div class="col-md-6">
                             <div class="contact-info portfolio-info-card">
                                 <h2>Contact Info</h2>
@@ -141,27 +165,40 @@
                                 </div>
                             </div>
                         </div>
+                        <!--End of contact information -->
                     </div>
                 </div>
+                <!--Start of hobbies section-->
                 <div class="hobbies group">
                     <div class="heading">
                         <h2 class="text-center">Hobbies</h2>
                     </div>
                     <p class="text-center text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras risus ligula, iaculis ut metus sit amet, luctus pharetra mauris. Aliquam purus felis, pretium vel pretium vitae, dapibus sodales ante. Suspendisse potenti. Duis nunc eros.</p>
                 </div>
+                <!--Start of hobbies section-->
             </div>
+            <!--end of container-->
         </section>
+        <!--End of portfolio of user -->
     </main>
+    <!-- End of main content -->
+
+    <!--Start of footer-->
     <footer class="page-footer">
         <div class="container">
             <div class="links"><a href="#">About us</a><a href="#">Contact&nbsp;</a><a href="#"></a></div>
             <div class="social-icons"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-instagram-outline"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a></div>
         </div>
     </footer>
+    <!--End of footer-->
+
+    <!--Scripts-->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
     <script src="assets/js/theme.js"></script>
+    <!--End of scripts-->
+
 </body>
 
 </html>
