--- a/hire-me.html
+++ b/hire-me.html
@@ -5,13 +5,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Contact</title>
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
+
 </head>
 
 <body>
+    <!-- Start of navigation bar -->
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-white portfolio-navbar gradient">
         <div class="container"><a class="navbar-brand logo" href="#">Contadel</a><button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse"
@@ -25,37 +29,54 @@
             </div>
         </div>
     </nav>
+    <!-- End of navigation bar -->
+
+    <!-- Start of main content -->
     <main class="page hire-me-page">
         <section class="portfolio-block hire-me">
+            <!-- Start of container -->
             <div class="container">
+                <!-- Start of container title-->
                 <div class="heading">
                     <h2>Contact us</h2>
                 </div>
+                <!-- End of container title-->
+
+                <!-- Start of form-->
                 <form>
                     <div class="form-group"><label for="subject">Subject</label><select class="form-control" id="subject"><option value="" selected="">Choose Subject</option><option value="1">Subject 1</option><option value="2">Subject 2</option><option value="3">Subject 3</option></select></div>
-                    <div
-                        class="form-group"><label for="email">Email</label><input class="form-control" type="email" id="email"></div>
-            <div class="form-group"><label for="message">Message</label><textarea class="form-control" id="message"></textarea></div>
-            <div class="form-group">
-                <div class="form-row">
-                    <div class="col-md-6"><label for="hire-date">Date</label><input class="form-control" type="date" id="hire-date"></div>
-                    <div class="col-md-6 button"><button class="btn btn-primary btn-block" type="submit">Send</button></div>
-                </div>
+                    <div class="form-group"><label for="email">Email</label><input class="form-control" type="email" id="email"></div>
+                    <div class="form-group"><label for="message">Message</label><textarea class="form-control" id="message"></textarea></div>
+                    <div class="form-group">
+                        <div class="form-row">
+                            <div class="col-md-6"><label for="hire-date">Date</label><input class="form-control" type="date" id="hire-date"></div>
+                            <div class="col-md-6 button"><button class="btn btn-primary btn-block" type="submit">Send</button></div>
+                        </div>
+                    </div>
+                </form>
+                <!-- End of form-->
             </div>
-            </form>
-            </div>
+            <!-- End of container -->
         </section>
     </main>
+    <!-- End of main content -->
+
+    <!--Start of footer-->
     <footer class="page-footer">
         <div class="container">
             <div class="links"><a href="#">About us</a><a href="#">Contact&nbsp;</a><a href="#"></a></div>
             <div class="social-icons"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-instagram-outline"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a></div>
         </div>
     </footer>
+    <!--End of footer-->
+
+    <!--Scripts-->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
     <script src="assets/js/theme.js"></script>
+    <!--End of scripts-->
+
 </body>
 
 </html>
