--- a/loginpages/index.html
+++ b/loginpages/index.html
@@ -13,9 +13,7 @@
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link
-    href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template-->
   <link href="css/sb-admin-2.min.css" rel="stylesheet">
@@ -82,6 +80,7 @@
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Course List:</h6>
+            <a class="collapse-item" href="courses.html">All courses</a>
             <a class="collapse-item" href="#">Recently viewed</a>
             <a class="collapse-item" href="#">In progress</a>
             <a class="collapse-item" href="#">Completed</a>
@@ -94,9 +93,7 @@
       <hr class="sidebar-divider">
 
       <!-- Heading -->
-      <div class="sidebar-heading">
-        <!--Addons-->
-      </div>
+      <div class="sidebar-heading"></div>
 
       <!-- Nav Item - Pages Collapse Menu -->
       <li class="nav-item">
@@ -126,8 +123,6 @@
           <i class="fas fa-fw fa-chart-area"></i>
           <span>Stats</span></a>
       </li>
-
-
 
       <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block">
